examples/core/errors/syntax_recovery/02_extra_closing_paren.output.txt
❌ error[E0102]: Undefined variable
error[E0102]: Undefined variable
  ┌─ input:4:2
2 │ // The parser should recover after the extra )
3 │ // and potentially treat this as just (x)
4 │ (x))
     ^
5 │ 
  = note: Variable at index 0 is not defined in this scope
  = hint: Check variable name and scope
  = hint: Did you forget to define this variable?

📝 note: Variable at index 0 is not defined in this scope
🔧 help: Check variable name and scope
🔧 help: Did you forget to define this variable?
